packages/HydrogenLib-Next/hydrogenlib_next-0.2.0a2-py3-none-any.whl/hydrogenlib/_hycl/.old.source/2024.10-/antlr4_grammar/hyconfiglanguage.g4
grammar hyconfiglanguage;

configFile: (definition)* EOF;
definition: tableDef | varDef | importStmt;
tableDef: '[' NAME ']';
varDef: NAME '=' VALUE;
importStmt: ('from' NAME)? 'import' NAME;

NAME: [a-zA-Z_][a-zA-Z_0-9]*;
VALUE: .+?;
WS: [ \t\r\n]+ -> skip;

INDENT: '\n' (' ')+;
