packages/HydrogenLib-Next/hydrogenlib_next-0.2.0a2.tar.gz/hydrogenlib_next-0.2.0a2/src/hydrogenlib/_hycl/.old.source/2024.10-/antlr4_class/antlr4_grammar/hyconfiglanguageParser.py
# Generated from antlr4_grammar/hyconfiglanguage.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class hyconfiglanguageParser ( Parser ):

    grammarFileName = "hyconfiglanguage.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'['", "']'", "'='", "'from'", "'import'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "NAME", "VALUE", "INDENT" ]

    RULE_configFile = 0
    RULE_definition = 1
    RULE_tableDef = 2
    RULE_varDef = 3
    RULE_importStmt = 4

    ruleNames =  [ "configFile", "definition", "tableDef", "varDef", "importStmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    NAME=6
    VALUE=7
    INDENT=8

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ConfigFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(hyconfiglanguageParser.EOF, 0)

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(hyconfiglanguageParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(hyconfiglanguageParser.DefinitionContext,i)


        def getRuleIndex(self):
            return hyconfiglanguageParser.RULE_configFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfigFile" ):
                listener.enterConfigFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfigFile" ):
                listener.exitConfigFile(self)




    def configFile(self):

        localctx = hyconfiglanguageParser.ConfigFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_configFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 13
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 114) != 0):
                self.state = 10
                self.definition()
                self.state = 15
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 16
            self.match(hyconfiglanguageParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tableDef(self):
            return self.getTypedRuleContext(hyconfiglanguageParser.TableDefContext,0)


        def varDef(self):
            return self.getTypedRuleContext(hyconfiglanguageParser.VarDefContext,0)


        def importStmt(self):
            return self.getTypedRuleContext(hyconfiglanguageParser.ImportStmtContext,0)


        def getRuleIndex(self):
            return hyconfiglanguageParser.RULE_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefinition" ):
                listener.enterDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefinition" ):
                listener.exitDefinition(self)




    def definition(self):

        localctx = hyconfiglanguageParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition)
        try:
            self.state = 21
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 18
                self.tableDef()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 19
                self.varDef()
                pass
            elif token in [4, 5]:
                self.enterOuterAlt(localctx, 3)
                self.state = 20
                self.importStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(hyconfiglanguageParser.NAME, 0)

        def getRuleIndex(self):
            return hyconfiglanguageParser.RULE_tableDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableDef" ):
                listener.enterTableDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableDef" ):
                listener.exitTableDef(self)




    def tableDef(self):

        localctx = hyconfiglanguageParser.TableDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_tableDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 23
            self.match(hyconfiglanguageParser.T__0)
            self.state = 24
            self.match(hyconfiglanguageParser.NAME)
            self.state = 25
            self.match(hyconfiglanguageParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(hyconfiglanguageParser.NAME, 0)

        def VALUE(self):
            return self.getToken(hyconfiglanguageParser.VALUE, 0)

        def getRuleIndex(self):
            return hyconfiglanguageParser.RULE_varDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDef" ):
                listener.enterVarDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDef" ):
                listener.exitVarDef(self)




    def varDef(self):

        localctx = hyconfiglanguageParser.VarDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDef)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self.match(hyconfiglanguageParser.NAME)
            self.state = 28
            self.match(hyconfiglanguageParser.T__2)
            self.state = 29
            self.match(hyconfiglanguageParser.VALUE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(hyconfiglanguageParser.NAME)
            else:
                return self.getToken(hyconfiglanguageParser.NAME, i)

        def getRuleIndex(self):
            return hyconfiglanguageParser.RULE_importStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStmt" ):
                listener.enterImportStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStmt" ):
                listener.exitImportStmt(self)




    def importStmt(self):

        localctx = hyconfiglanguageParser.ImportStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_importStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 31
                self.match(hyconfiglanguageParser.T__3)
                self.state = 32
                self.match(hyconfiglanguageParser.NAME)


            self.state = 35
            self.match(hyconfiglanguageParser.T__4)
            self.state = 36
            self.match(hyconfiglanguageParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





